feat: show diff immediately if yaml editor is open for NL2Yaml task
chore: remove margins from the code blocks in the answer

Signed-off-by: Harikrishnan Balagopal <harikrishmenon@gmail.com>

--- a/frontend/packages/console-app/src/components/assistant/AssistantSidebar.scss
+++ b/frontend/packages/console-app/src/components/assistant/AssistantSidebar.scss
@@ -27,6 +27,10 @@
     margin-bottom: 1em;
 }
 
+.ocs-yaml-assistant__pending-button {
+    width: 3em;
+}
+
 .overflow-x-scroll {
     overflow-x: scroll;
 }
